# Preflight

./: .gitignore  Cargo.toml  LICENSE  README.md  releases.json  scan.schema.json
.github/workflows/: build.yml  ci.yml  preflight-ci.yml  release.yml
.preflight/: risk_config.json  risk_config.toml  scan.json
core/: Cargo.toml
core/src/: analyze.rs  command_ast.rs  config.rs  deps.rs  doctor.rs  exporter.rs  fix.rs  graph.rs  history.rs  json_diff.rs  lib.rs  main.rs  models.rs  oracle.rs  proposed_state.rs  remote.rs  risk.rs  risk_config.rs  scanner.rs  schema.rs  security.rs  server.rs  share.rs  snapshot.rs  spec.rs  system_provider.rs  tokenizer.rs  updater.rs  utils.rs  validate.rs  watch.rs
core/tests/: integration.rs
scripts/: build.ps1  build.sh  generate-graph-json.ps1  generate-graph-json.sh  install.ps1  install.sh  run-dashboard.ps1  run-dashboard.sh  simulate.ps1  simulate.sh
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  GraphView.tsx  IssuesPanel.tsx  RiskPanel.tsx  index.css  types.ts
xtask/: Cargo.toml
xtask/src/: main.rs
