[package]
name = "preflight"
version = "0.1.0"
edition = "2021"
authors = ["Tessrax Governance Kernel v16"]
license = "MIT"
description = "Deterministic system preflight scanner and dashboard feed"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
chrono = { version = "0.4", features = ["clock"] }
serde_repr = "0.1"
sysinfo = { version = "0.30", default-features = false, features = ["network", "system"] }
fs2 = "0.4"
axum = { version = "0.7", features = ["macros", "json"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
open = "5.1"
regex = "1"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
anyhow = "1"
semver = "1.0"
serde_yaml = "0.9"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.0"
